--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="initial-scale=1.0, width=device-width;" />
-    <title>Vite + React + TS</title>
+    <title>Kitaplatz Zentrale - Kita Finder</title>
   </head>
   <body>
     <div id="root"></div>
