--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0, width=device-width;" />
-    <title>Kitaplatz Zentrale - Kita Finder</title>
+    <title>kitaplatz-zentrale.de · Kitaplatz, Kinderleicht</title>
+    <meta
+      name="description"
+      content="Endlich einen Kitaplatz heute schnell und einfach mit kitaplatz-zentrale.de gefunden."
+    />
+    <meta
+      name="keywords"
+      content="Kitaplatz, Kita, Berlin, verfügbar, finden,
+    kindergarten, kindertagesstätte, suche"
+    />
+    <meta name="author" content="Kitaplatz Zentrale" />
+    <meta name="og:title" content="kitaplatz-zentrale.de" />
+    <meta
+      name="og:description"
+      content="Endlich einen Kitaplatz heute schnell und einfach mit kitaplatz-zentrale.de gefunden."
+    />
+    <meta name="og:image" content="/hero.png" />
+    <meta name="og:url" content="https://kitaplatz-zentrale.de" />
   </head>
   <body>
     <div id="root"></div>
