adjust og image meta

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
       name="og:description"
       content="Endlich einen Kitaplatz heute schnell und einfach mit kitaplatz-zentrale.de gefunden."
     />
-    <meta name="og:image" content="/hero.png" />
+    <meta name="og:image" content="hero.png" />
     <meta name="og:url" content="https://kitaplatz-zentrale.de" />
   </head>
   <body>
