adjust og image

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,17 @@
       name="og:description"
       content="Endlich einen Kitaplatz heute schnell und einfach mit kitaplatz-zentrale.de gefunden."
     />
-    <meta name="og:image" content="hero.png" />
+    <meta name="og:image" content="https://kitaplatz-zentrale.de/hero.png" />
+    <meta
+      name="og:image:secure_url"
+      content="https://kitaplatz-zentrale.de/hero.png"
+    />
+    <meta name="og:image:type" content="image/png" />
+    <meta name="og:image:width" content="1200" />
+    <meta name="og:image:height" content="630" />
+    <meta name="og:image:alt" content="Kitaplatz Zentrale" />
+    <meta name="og:type" content="website" />
+
     <meta name="og:url" content="https://kitaplatz-zentrale.de" />
   </head>
   <body>
