--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,23 +14,43 @@
     kindergarten, kindertagesstätte, suche"
     />
     <meta name="author" content="Kitaplatz Zentrale" />
-    <meta name="og:title" content="kitaplatz-zentrale.de" />
     <meta
       name="og:description"
       content="Endlich einen Kitaplatz heute schnell und einfach mit kitaplatz-zentrale.de gefunden."
     />
-    <meta name="og:image" content="https://kitaplatz-zentrale.de/hero.png" />
+    <meta
+      name="og:image"
+      content="https://dev.kitaplatz-zentrale.de/hero.png"
+    />
     <meta
       name="og:image:secure_url"
-      content="https://kitaplatz-zentrale.de/hero.png"
+      content="https://dev.kitaplatz-zentrale.de/hero.png"
     />
     <meta name="og:image:type" content="image/png" />
     <meta name="og:image:width" content="1200" />
     <meta name="og:image:height" content="630" />
     <meta name="og:image:alt" content="Kitaplatz Zentrale" />
-    <meta name="og:type" content="website" />
+    <meta name="og:site_name" content="kitaplatz-zentrale.de" />
+    <meta name="og:locale" content="de_DE" />
 
-    <meta name="og:url" content="https://kitaplatz-zentrale.de" />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://kitaplatz-zentrale.de" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="kitaplatz-zentrale.de" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="dev.kitaplatz-zentrale.de" />
+    <meta property="twitter:url" content="https://dev.kitaplatz-zentrale.de" />
+    <meta name="twitter:title" content="kitaplatz-zentrale.de" />
+    <meta
+      name="twitter:description"
+      content="Endlich einen Kitaplatz heute schnell und einfach mit kitaplatz-zentrale.de gefunden."
+    />
+    <meta
+      name="twitter:image"
+      content="https://dev.kitaplatz-zentrale.de/hero.png"
+    />
   </head>
   <body>
     <div id="root"></div>
