--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,13 +18,10 @@
       name="og:description"
       content="Endlich einen Kitaplatz heute schnell und einfach mit kitaplatz-zentrale.de gefunden."
     />
-    <meta
-      name="og:image"
-      content="https://dev.kitaplatz-zentrale.de/hero.png"
-    />
+    <meta name="og:image" content="https://kitaplatz-zentrale.de/hero.png" />
     <meta
       name="og:image:secure_url"
-      content="https://dev.kitaplatz-zentrale.de/hero.png"
+      content="https://kitaplatz-zentrale.de/hero.png"
     />
     <meta name="og:image:type" content="image/png" />
     <meta name="og:image:width" content="1200" />
@@ -40,8 +37,8 @@
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="dev.kitaplatz-zentrale.de" />
-    <meta property="twitter:url" content="https://dev.kitaplatz-zentrale.de" />
+    <meta property="twitter:domain" content="kitaplatz-zentrale.de" />
+    <meta property="twitter:url" content="https://kitaplatz-zentrale.de" />
     <meta name="twitter:title" content="kitaplatz-zentrale.de" />
     <meta
       name="twitter:description"
@@ -49,7 +46,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://dev.kitaplatz-zentrale.de/hero.png"
+      content="https://kitaplatz-zentrale.de/hero.png"
     />
   </head>
   <body>
